--- a/package.json
+++ b/package.json
@@ -19,19 +19,25 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.7.2"
+  },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.x",
+    "prop-types": "15.x"
   },
   "devDependencies": {
     "nwb": "0.23.x",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
-  "author": "",
+  "author": "Davi Roox",
   "homepage": "",
   "license": "MIT",
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roxdavirox/editable-label-react.git"
+  },
   "keywords": [
     "react-component"
   ]
